修改后台dashboard样式

--- a/newbeeMall/src/main/resources/templates/admin/header.html
+++ b/newbeeMall/src/main/resources/templates/admin/header.html
@@ -41,7 +41,7 @@
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
                     <i class="fa fa-user-o mr-2"></i> 姓名
-                    <span class="float-right text-muted text-sm">十三 / 13</span>
+                    <span class="float-right text-muted text-sm"></span>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
@@ -51,7 +51,7 @@
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
                     <i class="fa fa-address-card mr-2"></i> 邮箱
-                    <span class="float-right text-muted text-sm">2449207463@qq.com</span>
+                    <span class="float-right text-muted text-sm"></span>
                 </a>
             </div>
         </li>
