--- a/newbeeMall/src/main/resources/templates/admin/login.html
+++ b/newbeeMall/src/main/resources/templates/admin/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>newbee-mall管理系统 | Log in</title>
+    <title>mall管理系统 | Log in</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" th:href="@{/admin/dist/img/favicon.png}"/>
@@ -33,7 +33,7 @@
 </div>
 <div class="login-box">
     <div class="login-logo" style="color: #1baeae;">
-        <h1>管理系统登陆</h1>
+        <h1>mall管理系统登陆</h1>
     </div>
     <!-- /.login-logo -->
     <div class="card">
@@ -67,12 +67,10 @@
                     <div class="col-8">
                     </div>
                     <div class="col-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">登录
-                        </button>
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
                     </div>
                 </div>
             </form>
-
         </div>
         <!-- /.login-card-body -->
     </div>
