--- a/newbeeMall/src/main/resources/templates/admin/header.html
+++ b/newbeeMall/src/main/resources/templates/admin/header.html
@@ -3,7 +3,7 @@
 <head th:fragment="header-fragment">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>newbee-mall | 后台管理系统</title>
+    <title>mall | 后台管理系统</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -30,7 +30,7 @@
     <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
             <a class="nav-link" th:href="@{/}">
-                <i class="fa fa-paper-plane">&nbsp;&nbsp;newbee-mall首页</i>
+                <i class="fa fa-paper-plane">&nbsp;&nbsp;mall首页</i>
             </a>
         </li>
         <li class="nav-item dropdown">
@@ -41,7 +41,7 @@
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
                     <i class="fa fa-user-o mr-2"></i> 姓名
-                    <span class="float-right text-muted text-sm"></span>
+                    <span class="float-right text-muted text-sm">zwl</span>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
