--- a/newbeeMall/src/main/resources/templates/admin/index.html
+++ b/newbeeMall/src/main/resources/templates/admin/index.html
@@ -23,11 +23,11 @@
                 <div class="card-body">
                     <div class="panel panel-default">
                         <div style="padding: 10px 0 20px 10px;">
-                            <a href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">
-                                <img th:src="@{/admin/dist/img/newbee-logo.png}" style="width: 480px;height: 240px;">
-                                <p>newbee-mall 项目是一套电商系统，包括 newbee-mall 商城系统及 newbee-mall-admin 商城后台管理系统，基于 Spring Boot
-                                    2.X
-                                    及相关技术栈开发。
+                            <a href="##" target="_blank">
+                                <img th:src="@{/admin/dist/img/newbee-logo.png}" style="width: 380px;height: 240px;">
+                                <p>mall 项目是一套电商系统，包括 mall 商城系统及 mall-admin 商城后台管理系统，后端基于 SpringBoot
+                                    2.X + mybaits + Thymeleaf 及相关技术栈开发。
+                                    前端基于 Bootstrap + AdminLTE3 及相关技术栈开发。
                                     前台商城系统包含首页门户、商品分类、新品上线、首页轮播、商品推荐、商品搜索、商品展示、购物车、订单结算、订单流程、个人订单管理、会员中心、帮助中心等模块。
                                     后台管理系统包含数据面板、轮播图管理、商品管理、订单管理、会员管理、分类管理、设置等模块。</p>
                             </a>
