--- a/newbeeMall/src/main/resources/templates/admin/sidebar.html
+++ b/newbeeMall/src/main/resources/templates/admin/sidebar.html
@@ -36,7 +36,7 @@
                 <li class="nav-header">首页配置</li>
                 <li class="nav-item">
                     <a th:href="@{/admin/carousels}"
-                       th:class="${path}=='newbee_mall_carousel'?'nav-link active':'nav-link'">
+                       th:class="${path}=='nwbee_mall_carousel'?'nav-link active':'nav-link'">
                         <i class="nav-icon fa fa-file-image-o"></i>
                         <p>
                             轮播图配置
